force-app/main/default/objects/Contact/fields/Adresse_de_repli_code_postal__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_repli_code_postal__c</fullName>
    <label>Adresse de repli: code postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>