force-app/main/default/objects/Contact/fields/Adresse_de_repli_Etat__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_repli_Etat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse de repli: Etat</label>
    <referenceTo>Etat__c</referenceTo>
    <relationshipLabel>Contacts (Adresse de repli: Etat)</relationshipLabel>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>