force-app/main/default/objects/Contact/fields/Adresse_de_repli_Ligne_2__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_repli_Ligne_2__c</fullName>
    <label>Adresse de repli: Ligne 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>