force-app/main/default/objects/Contact/fields/Adresse_de_repli_Pays__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_repli_Pays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse de repli: Pays</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Contacts (Adresse de repli: Pays)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>