force-app/main/default/objects/Contact/fields/Adresse_de_Repli_Pays_WF__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_Repli_Pays_WF__c</fullName>
    <formula>IF(  Adresse_de_repli_Pays__r.Name  &lt;&gt; &quot;&quot;, Adresse_de_repli_Pays__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse de Repli:Pays WF</label>
    <type>Text</type>
</CustomField>