force-app/main/default/objects/Contact/fields/Adresse_de_repli_ville__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_repli_ville__c</fullName>
    <label>Adresse de repli: ville</label>
    <length>50</length>
    <type>Text</type>
</CustomField>