force-app/main/default/objects/Contact/fields/Adresse_Email_Personnelle__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Email_Personnelle__c</fullName>
    <label>Email Personnel</label>
    <type>Email</type>
</CustomField>