force-app/main/default/objects/Contact/fields/Adresse_Personnelle_Ligne_3__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Personnelle_Ligne_3__c</fullName>
    <label>Adresse Personnelle: Ligne 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>