force-app/main/default/objects/Contact/fields/Adresse_Personnelle_Pays_WF__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Personnelle_Pays_WF__c</fullName>
    <formula>IF(  Pays__r.Name  &lt;&gt; &quot;&quot;,  Pays__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Personnelle:Pays WF</label>
    <type>Text</type>
</CustomField>