force-app/main/default/objects/Contact/fields/Adresse_R_gion__c.field-meta.xml
<CustomField>
    <fullName>Adresse_R_gion__c</fullName>
    <formula>IF(  D_partement__c  &lt;&gt; Null,   D_partement__r.R_gion__c   , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse: Règion</label>
    <type>Text</type>
</CustomField>