force-app/main/default/objects/Contact/fields/Adresse_Repli_Rue__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Repli_Rue__c</fullName>
    <label>Adresse de Repli: Rue</label>
    <length>120</length>
    <type>Text</type>
</CustomField>