force-app/main/default/objects/Contact/fields/Adresse_Zone_de_commercialisation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Zone_de_commercialisation__c</fullName>
    <formula>Pays__r.Zone_de_commercialisation_rapport__c</formula>
    <label>Adresse:Zone de commercialisation</label>
    <type>Text</type>
</CustomField>