force-app/main/default/objects/Contact/fields/Ann_e_donation__c.field-meta.xml
<CustomField>
    <fullName>Ann_e_donation__c</fullName>
    <label>Année donation</label>
    <type>Date</type>
</CustomField>