force-app/main/default/objects/Contact/fields/Ann_e_du_dipl_me__c.field-meta.xml
<CustomField>
    <fullName>Ann_e_du_dipl_me__c</fullName>
    <label>Année du diplôme</label>
    <length>4</length>
    <type>Text</type>
</CustomField>