force-app/main/default/objects/Contact/fields/Anniversaire_dans_les_30_jours__c.field-meta.xml
<CustomField>
    <fullName>Anniversaire_dans_les_30_jours__c</fullName>
    <formula>AND( 
TODAY()&gt;=(DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate))-30), 
TODAY()&lt;=DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversaire dans les 30 jours</label>
    <type>Checkbox</type>
</CustomField>