force-app/main/default/objects/Contact/fields/Appliquer_l_e_mail_EM_Lyon__c.field-meta.xml
<CustomField>
    <fullName>Appliquer_l_e_mail_EM_Lyon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appliquer l&apos;e-mail EM Lyon</label>
    <type>Checkbox</type>
</CustomField>