force-app/main/default/objects/Contact/fields/Appliquer_l_e_mail_professionnel__c.field-meta.xml
<CustomField>
    <fullName>Appliquer_l_e_mail_professionnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appliquer l&apos;e-mail professionnel</label>
    <type>Checkbox</type>
</CustomField>