force-app/main/default/objects/Contact/fields/Autres_formations__c.field-meta.xml
<CustomField>
    <fullName>Autres_formations__c</fullName>
    <label>Autres formations</label>
    <type>TextArea</type>
</CustomField>