force-app/main/default/objects/Contact/fields/B_n_ficiaire_partenariat__c.field-meta.xml
<CustomField>
    <fullName>B_n_ficiaire_partenariat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bénéficiaire partenariat</label>
    <type>Checkbox</type>
</CustomField>