force-app/main/default/objects/Contact/fields/Cadre__c.field-meta.xml
<CustomField>
    <fullName>Cadre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadre</label>
    <type>Checkbox</type>
</CustomField>