force-app/main/default/objects/Contact/fields/Cat_gorie_r_le__c.field-meta.xml
<CustomField>
    <fullName>Cat_gorie_r_le__c</fullName>
    <label>Catégorie rôle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direction, institutions ou associations apparentées à EMLYON</fullName>
            </value>
            <value>
                <fullName>Dirigeants Entreprises</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>