force-app/main/default/objects/Contact/fields/Centre_d_int_r_t__c.field-meta.xml
<CustomField>
    <fullName>Centre_d_int_r_t__c</fullName>
    <label>Centre d&apos;interêts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Culture</fullName>
            </value>
            <value>
                <fullName>Loisirs au sens large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>