force-app/main/default/objects/Contact/fields/Centre_d_int_r_t_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Centre_d_int_r_t_Fundraising__c</fullName>
    <label>Centre d&apos;intérêt Fundraising</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Savoir</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>