force-app/main/default/objects/Contact/fields/chk_careers_forum_1__c.field-meta.xml
<CustomField>
    <fullName>chk_careers_forum_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Careers Forum -14/01/19</description>
    <inlineHelpText>Careers Forum -14/01/19</inlineHelpText>
    <label>CForum-14/01/19</label>
    <type>Checkbox</type>
</CustomField>