force-app/main/default/objects/Contact/fields/chk_careers_forum_2__c.field-meta.xml
<CustomField>
    <fullName>chk_careers_forum_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Career Forums - Audit &amp; Conseil - 16/01/19</description>
    <inlineHelpText>Career Forums - Audit &amp; Conseil - 16/01/19</inlineHelpText>
    <label>CForum-audit&amp;conseil-16/01/19</label>
    <type>Checkbox</type>
</CustomField>