force-app/main/default/objects/Contact/fields/chk_careers_forum_3__c.field-meta.xml
<CustomField>
    <fullName>chk_careers_forum_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Careers Forum 15/01/19</description>
    <inlineHelpText>Careers Forum 15/01/19</inlineHelpText>
    <label>CForum-15/01/19</label>
    <type>Checkbox</type>
</CustomField>