force-app/main/default/objects/Contact/fields/chk_digital_night_1__c.field-meta.xml
<CustomField>
    <fullName>chk_digital_night_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Digital Night - novembre 2018 - Paris</description>
    <inlineHelpText>Digital Night - novembre 2018 - Paris</inlineHelpText>
    <label>DNight-11/2018-Paris</label>
    <type>Checkbox</type>
</CustomField>