force-app/main/default/objects/Contact/fields/chk_digital_night_2__c.field-meta.xml
<CustomField>
    <fullName>chk_digital_night_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Digital Night - 7/03/19 - Lyon</description>
    <inlineHelpText>Digital Night - 7/03/19 - Lyon</inlineHelpText>
    <label>DNight-07/03/2019-Lyon</label>
    <type>Checkbox</type>
</CustomField>