force-app/main/default/objects/Contact/fields/chk_finance_career_days_1__c.field-meta.xml
<CustomField>
    <fullName>chk_finance_career_days_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Finance career day - 04/10/2018 - Lyon</description>
    <inlineHelpText>Finance career day - 04/10/2018 - Lyon</inlineHelpText>
    <label>Fin. Career Days - 04/10/2018 - Lyon</label>
    <type>Checkbox</type>
</CustomField>