force-app/main/default/objects/Contact/fields/chk_vocation_days_1__c.field-meta.xml
<CustomField>
    <fullName>chk_vocation_days_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vocation days - Finance en entreprise - 17/10/18 - Lyon</description>
    <inlineHelpText>Vocation days - Finance en entreprise - 17/10/18 - Lyon</inlineHelpText>
    <label>VDay-Finance 17/10/18-Lyon</label>
    <type>Checkbox</type>
</CustomField>