force-app/main/default/objects/Contact/fields/chk_vocation_days_2__c.field-meta.xml
<CustomField>
    <fullName>chk_vocation_days_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vocation days - Conseil - 15/10/18 - Lyon</description>
    <inlineHelpText>Vocation days - Conseil - 15/10/18 - Lyon</inlineHelpText>
    <label>VDay-Conseil-15/10/18-Lyon</label>
    <type>Checkbox</type>
</CustomField>