force-app/main/default/objects/Contact/fields/chk_vocation_days_3__c.field-meta.xml
<CustomField>
    <fullName>chk_vocation_days_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vocation days - Business development - 18/10/18 - Lyon</description>
    <inlineHelpText>Vocation days - Business development - 18/10/18 - Lyon</inlineHelpText>
    <label>VDay-Business-18/10/18-Lyon</label>
    <type>Checkbox</type>
</CustomField>