force-app/main/default/objects/Contact/fields/Code_Fonction__c.field-meta.xml
<CustomField>
    <fullName>Code_Fonction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Fonction</label>
    <referenceTo>Fonction__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>