force-app/main/default/objects/Contact/fields/Code_Participant__c.field-meta.xml
<CustomField>
    <fullName>Code_Participant__c</fullName>
    <description>Ce champ est remplit automatiquement depuis le champ &quot;compteur tiers participant&quot;</description>
    <label>Code Participant</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>