force-app/main/default/objects/Contact/fields/Code_Pays__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays__c</fullName>
    <formula>Pays__r.Code_Pays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Pays</label>
    <type>Text</type>
</CustomField>