force-app/main/default/objects/Contact/fields/Code_Pays_Nationalit__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays_Nationalit__c</fullName>
    <formula>Nationalit__r.Code_Pays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Pays Nationalité</label>
    <type>Text</type>
</CustomField>