force-app/main/default/objects/Contact/fields/Code_Pays_R_sidence_Compte__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays_R_sidence_Compte__c</fullName>
    <formula>Account.CodePays__r.Code_Pays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Pays Résidence Compte</label>
    <type>Text</type>
</CustomField>