force-app/main/default/objects/Contact/fields/Code_tiers_contact__c.field-meta.xml
<CustomField>
    <fullName>Code_tiers_contact__c</fullName>
    <description>Ce champ est automatiquement remplit par workflow depuis compteur contact</description>
    <label>Code tiers contact</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>