force-app/main/default/objects/Contact/fields/Commentaire_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_du_contact__c</fullName>
    <label>Commentaire du contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>