force-app/main/default/objects/Contact/fields/Communication_non_tablie__c.field-meta.xml
<CustomField>
    <fullName>Communication_non_tablie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communication non établie</label>
    <type>Checkbox</type>
</CustomField>