force-app/main/default/objects/Contact/fields/Compl_ment_R_le__c.field-meta.xml
<CustomField>
    <fullName>Compl_ment_R_le__c</fullName>
    <label>Complément Rôle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animateur atelier</fullName>
            </value>
            <value>
                <fullName>Conférence</fullName>
            </value>
            <value>
                <fullName>Groupe</fullName>
            </value>
            <value>
                <fullName>Bilan d&apos;orientation</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
            <value>
                <fullName>Animateur événements/inscriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>