force-app/main/default/objects/Contact/fields/Compteur_Tiers_Contact__c.field-meta.xml
<CustomField>
    <fullName>Compteur_Tiers_Contact__c</fullName>
    <description>Compteur automatique tiers contact ( remplit automatiquement le champ Code tiers contact)</description>
    <displayFormat>8{000000}</displayFormat>
    <label>Compteur Tiers Contact</label>
    <type>AutoNumber</type>
</CustomField>