force-app/main/default/objects/Contact/fields/Compteur_Tiers_Participant__c.field-meta.xml
<CustomField>
    <fullName>Compteur_Tiers_Participant__c</fullName>
    <description>Compteur pour les tiers &quot;Participant&quot; qui remplit automatiquement le champ &quot;code tiers participant&quot;</description>
    <displayFormat>7{000000}</displayFormat>
    <label>Compteur Tiers Participant</label>
    <type>AutoNumber</type>
</CustomField>