force-app/main/default/objects/Contact/fields/Confidentiel_annuaire_papier__c.field-meta.xml
<CustomField>
    <fullName>Confidentiel_annuaire_papier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidentiel annuaire papier</label>
    <type>Checkbox</type>
</CustomField>