force-app/main/default/objects/Contact/fields/Confidentiel_annuaire_Web__c.field-meta.xml
<CustomField>
    <fullName>Confidentiel_annuaire_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidentiel annuaire Web</label>
    <type>Checkbox</type>
</CustomField>