force-app/main/default/objects/Contact/fields/Contact_par_prestataire__c.field-meta.xml
<CustomField>
    <fullName>Contact_par_prestataire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacté par prestataire</label>
    <type>Checkbox</type>
</CustomField>