force-app/main/default/objects/Contact/fields/Contexte_premier_contact__c.field-meta.xml
<CustomField>
    <fullName>Contexte_premier_contact__c</fullName>
    <label>Contexte premier contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agent commercial</fullName>
            </value>
            <value>
                <fullName>Articles de Presse</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Bouche à oreille</fullName>
            </value>
            <value>
                <fullName>Classements</fullName>
            </value>
            <value>
                <fullName>Diplômés</fullName>
            </value>
            <value>
                <fullName>Directories/ Guides</fullName>
            </value>
            <value>
                <fullName>Display/ Banner</fullName>
            </value>
            <value>
                <fullName>Emailing</fullName>
            </value>
            <value>
                <fullName>Evènements/ Conférences</fullName>
            </value>
            <value>
                <fullName>Forum/salon</fullName>
            </value>
            <value>
                <fullName>Mailing (papier)</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Prescripteurs</fullName>
            </value>
            <value>
                <fullName>Publicité papier</fullName>
            </value>
            <value>
                <fullName>Réputation</fullName>
            </value>
            <value>
                <fullName>Réseaux sociaux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>