force-app/main/default/objects/Contact/fields/convsta_code_etudiant_EM__c.field-meta.xml
<CustomField>
    <fullName>convsta_code_etudiant_EM__c</fullName>
    <externalId>true</externalId>
    <label>code étudiant</label>
    <length>25</length>
    <type>Text</type>
</CustomField>