force-app/main/default/objects/Contact/fields/convsta_programme__c.field-meta.xml
<CustomField>
    <fullName>convsta_programme__c</fullName>
    <label>convsta_programme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>