force-app/main/default/objects/Contact/fields/Convsta_Tuteur_EM__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Tuteur_EM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuteur EM</label>
    <type>Checkbox</type>
</CustomField>