force-app/main/default/objects/Contact/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <formula>Pays__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pays du compte</label>
    <type>Text</type>
</CustomField>