force-app/main/default/objects/Contact/fields/D_c_d__c.field-meta.xml
<CustomField>
    <fullName>D_c_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Décédé</label>
    <type>Checkbox</type>
</CustomField>