force-app/main/default/objects/Contact/fields/D_partement__c.field-meta.xml
<CustomField>
    <fullName>D_partement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse: Département</label>
    <referenceTo>D_partement__c</referenceTo>
    <relationshipLabel>Contacts (Département)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>