force-app/main/default/objects/Contact/fields/D_tail_canal_d_acquisition__c.field-meta.xml
<CustomField>
    <fullName>D_tail_canal_d_acquisition__c</fullName>
    <inlineHelpText>précise un sous canal de la fiche piste dans le système</inlineHelpText>
    <label>Ancien détail canal d&apos;acquisition</label>
    <length>150</length>
    <type>Text</type>
</CustomField>