force-app/main/default/objects/Contact/fields/D_tail_de_validation__c.field-meta.xml
<CustomField>
    <fullName>D_tail_de_validation__c</fullName>
    <label>Détail de validation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>