force-app/main/default/objects/Contact/fields/D_tail_Ev_nements_Relations_Employeurs__c.field-meta.xml
<CustomField>
    <fullName>D_tail_Ev_nements_Relations_Employeurs__c</fullName>
    <label>Détail Evénements Relations Employeurs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Participation_evenement__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vocation days - Finance en entreprise - 15/10/18 - Lyon</fullName>
            </value>
            <value>
                <fullName>Vocation days - Conseil - 16/10/18 - Lyon</fullName>
            </value>
            <value>
                <fullName>Vocation days - Business development - 17/10/18 - Lyon</fullName>
            </value>
            <value>
                <fullName>Vocation days - Marketing &amp; Business Development - 9/10/18 - Paris</fullName>
            </value>
            <value>
                <fullName>Vocation days - Marketing &amp; Business Development - Date à confirmer - St Etienne</fullName>
            </value>
            <value>
                <fullName>Vocation days - Marketing - 18/10/18 - Lyon</fullName>
            </value>
            <value>
                <fullName>Vocation days - Banque de détail - Date à confirmer - St Etienne</fullName>
            </value>
            <value>
                <fullName>Digital Night - novembre 2018 - Paris</fullName>
            </value>
            <value>
                <fullName>Digital Night - 7/03/19 - Lyon</fullName>
            </value>
            <value>
                <fullName>Careers Forum -14/01/19</fullName>
            </value>
            <value>
                <fullName>Careers Forum -15/01/19</fullName>
            </value>
            <value>
                <fullName>Careers Forum - journée audit &amp; conseil - 16/01/19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>