force-app/main/default/objects/Contact/fields/Date_cr_ation_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Date_cr_ation_Dynamics__c</fullName>
    <label>Date création Dynamics</label>
    <type>DateTime</type>
</CustomField>