force-app/main/default/objects/Contact/fields/Date_de_cotisation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cotisation__c</fullName>
    <label>Date de cotisation</label>
    <type>Date</type>
</CustomField>