force-app/main/default/objects/Contact/fields/Date_de_cr_ation_contact__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cr_ation_contact__c</fullName>
    <label>Date de création contact</label>
    <type>DateTime</type>
</CustomField>