force-app/main/default/objects/Contact/fields/Date_de_Cr_ation_de_la_fiche__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Cr_ation_de_la_fiche__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de Création de la fiche</label>
    <type>DateTime</type>
</CustomField>