force-app/main/default/objects/Contact/fields/Date_de_traitement_t_l_conseiller__c.field-meta.xml
<CustomField>
    <fullName>Date_de_traitement_t_l_conseiller__c</fullName>
    <label>Date de traitement téléconseiller</label>
    <type>Date</type>
</CustomField>