force-app/main/default/objects/Contact/fields/Date_de_V_rification__c.field-meta.xml
<CustomField>
    <fullName>Date_de_V_rification__c</fullName>
    <label>Date de Vérification</label>
    <type>Date</type>
</CustomField>