force-app/main/default/objects/Contact/fields/Date_maj_mav__c.field-meta.xml
<CustomField>
    <fullName>Date_maj_mav__c</fullName>
    <label>Date mise à jours MAV</label>
    <type>Date</type>
</CustomField>