force-app/main/default/objects/Contact/fields/Date_Modification_Fiche__c.field-meta.xml
<CustomField>
    <fullName>Date_Modification_Fiche__c</fullName>
    <label>Date Modification Fiche</label>
    <type>DateTime</type>
</CustomField>