force-app/main/default/objects/Contact/fields/DateOptedInOfEmail__c.field-meta.xml
<CustomField>
    <fullName>DateOptedInOfEmail__c</fullName>
    <label>Date d’opt-in</label>
    <type>Date</type>
</CustomField>