force-app/main/default/objects/Contact/fields/DateOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>DateOptedOutOfEmail__c</fullName>
    <label>Date d&apos;opt-out</label>
    <type>Date</type>
</CustomField>