force-app/main/default/objects/Contact/fields/Deja_eu_premiere_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Deja_eu_premiere_opportunite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lorsqu&apos;une première opportunité est crée pour ce contact, on peut utiliser cette case pour en garder la trace dans le système et faire des actions par workflow ou processus</description>
    <label>Déjà eu première opportunité</label>
    <type>Checkbox</type>
</CustomField>