force-app/main/default/objects/Contact/fields/Derni_re_fonction__c.field-meta.xml
<CustomField>
    <fullName>Derni_re_fonction__c</fullName>
    <label>Dernière fonction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>