force-app/main/default/objects/Contact/fields/Dernier_dipl_me_ou_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Dernier_dipl_me_ou_en_cours__c</fullName>
    <label>Dernier diplôme (ou en cours)</label>
    <length>45</length>
    <type>Text</type>
</CustomField>