force-app/main/default/objects/Contact/fields/Dipl_me_fran_ais__c.field-meta.xml
<CustomField>
    <fullName>Dipl_me_fran_ais__c</fullName>
    <description>différencier les prospects devant rejoindre les banques communes d&apos;épreuves VS ceux qui doivent passer par le système d&apos;admissions internationales</description>
    <label>Diplôme français</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>