force-app/main/default/objects/Contact/fields/Diplome_echoue__c.field-meta.xml
<CustomField>
    <fullName>Diplome_echoue__c</fullName>
    <label>Diplôme échoué</label>
    <length>200</length>
    <type>Text</type>
</CustomField>