force-app/main/default/objects/Contact/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <label>Domaine d&apos;études</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Bac ES (économique et sociale)</fullName>
            </value>
            <value>
                <fullName>Bac L (littéraire)</fullName>
            </value>
            <value>
                <fullName>Bac S (scientifique)</fullName>
            </value>
            <value>
                <fullName>Bac STMG</fullName>
            </value>
            <value>
                <fullName>Droit</fullName>
            </value>
            <value>
                <fullName>Ecole de commerce française</fullName>
            </value>
            <value>
                <fullName>Economie</fullName>
            </value>
            <value>
                <fullName>Gestion</fullName>
            </value>
            <value>
                <fullName>Ingénieur</fullName>
            </value>
            <value>
                <fullName>Santé (pharmacie, vétérinaire,…)</fullName>
            </value>
            <value>
                <fullName>Sciences (mathématiques, physique,...)</fullName>
            </value>
            <value>
                <fullName>Sciences humaines (lettres,...)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>