force-app/main/default/objects/Contact/fields/Donateur_prospect__c.field-meta.xml
<CustomField>
    <fullName>Donateur_prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donateur prospect</label>
    <type>Checkbox</type>
</CustomField>